--- a/java/spring-boot-boke/spring-boot-boke-boot/src/main/resources/application-dev.properties
+++ b/java/spring-boot-boke/spring-boot-boke-boot/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 #datasource
 jdbc.type=mysql
-spring.datasource.url=jdbc:mysql://193.112.112.136/blog
+spring.datasource.url=jdbc:mysql://120.55.59.65/blog?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -29,6 +29,10 @@ spring.mail.password=magepskpbhtbijjh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.port=465
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
 
 
 
