--- a/java/spring-boot-boke/spring-boot-boke-boot/src/main/resources/application.properties
+++ b/java/spring-boot-boke/spring-boot-boke-boot/src/main/resources/application.properties
@@ -27,9 +27,9 @@ spring.data.elasticsearch.cluster-name = blog-es
 
 ##\u8BBE\u7F6E\u4E0EEureka Server\u4EA4\u4E92\u7684\u5730\u5740\uFF0C\u67E5\u8BE2\u670D\u52A1\u548C\u6CE8\u518C\u670D\u52A1\u90FD\u9700\u8981\u4F9D\u8D56\u8FD9\u4E2A\u5730\u5740\u3002\u9ED8\u8BA4\u662Fhttp://localhost:8761/eureka\uFF1B\u591A\u4E2A\u5730\u5740\u53EF\u4F7F\u7528','\u5206\u9694\u3002
 eureka.client.serviceUrl.defaultZone=http://193.112.112.136:8761/eureka/
-eureka.instance.healthCheckUrlPath=http://${spring.cloud.client.ipAddress}/${server.port}${server.context-path}/health
+#eureka.instance.healthCheckUrlPath=http://${spring.cloud.client.ipAddress}/${server.port}${server.context-path}/health
 eureka.instance.status-page-url=http://${spring.cloud.client.ipAddress}:${server.port}${server.context-path}/swagger-ui.html
-eureka.instancepreferIpAddress=true
+#eureka.instancepreferIpAddress=true
 
 feign.hystrix.enabled=true
 
